force-app/main/default/objects/Account/fields/Account_Site__c.field-meta.xml
<CustomField>
    <fullName>Account_Site__c</fullName>
    <label>Account Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>