force-app/main/default/objects/Account/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (AccountId)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>