force-app/main/default/objects/Account/fields/Active_Care_Episode_Location__c.field-meta.xml
<CustomField>
    <fullName>Active_Care_Episode_Location__c</fullName>
    <description>This field is used to associate the provider with the account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Care Episode Location</label>
    <referenceTo>Provider__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>