force-app/main/default/objects/Account/fields/Alumni_Committee__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alumni Committee</label>
    <type>Checkbox</type>
</CustomField>