force-app/main/default/objects/Account/fields/Alumni_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Status_Date__c</fullName>
    <label>Alumni Status Date(Hidden)</label>
    <type>Date</type>
</CustomField>