force-app/main/default/objects/Account/fields/Authoriztion_Number__c.field-meta.xml
<CustomField>
    <fullName>Authoriztion_Number__c</fullName>
    <label>Authoriztion Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>