force-app/main/default/objects/Account/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <description>This field is used to associate the account with a specific bed.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bed</label>
    <referenceTo>Bed__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>