force-app/main/default/objects/Account/fields/Bed_Number__c.field-meta.xml
<CustomField>
    <fullName>Bed_Number__c</fullName>
    <description>Formula field to record the bed number associated with the specific bed linked with the account.</description>
    <formula>Bed__r.Bed_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed Number</label>
    <type>Text</type>
</CustomField>