force-app/main/default/objects/Account/fields/Birth_Sex__c.field-meta.xml
<CustomField>
    <fullName>Birth_Sex__c</fullName>
    <description>This field referred as the administrative gender.</description>
    <label>Gender Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>446151000124109</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>446141000124107</fullName>
                <label>Female</label>
            </value>
            <value>
                <fullName>407377005</fullName>
                <label>Female-to-Male(FTM)/Transgender Male/Trans Man</label>
            </value>
            <value>
                <fullName>407376001</fullName>
                <label>Male-to-Female (MTF)/Transgender Female/Trans Woman</label>
            </value>
            <value>
                <fullName>446131000124102</fullName>
                <label>Genderqueer, neither exclusively male nor female</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <label>Additional gender category or other, please specify</label>
            </value>
            <value>
                <fullName>ASKU</fullName>
                <label>Choose not to disclose</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>