force-app/main/default/objects/Account/fields/birthdate__c.field-meta.xml
<CustomField>
    <fullName>birthdate__c</fullName>
    <formula>IF( NOT( ISBLANK(DOB__c ) ) , CASE(MONTH( DOB__c ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)+ &apos; &apos;+TEXT(DAY(DOB__c))+&apos;,&apos;+&apos; &apos;+TEXT(Year(DOB__c)), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>birthdate</label>
    <type>Text</type>
</CustomField>