force-app/main/default/objects/Account/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <description>Represents the blood group of the account holder.</description>
    <label>Blood Group</label>
    <length>5</length>
    <type>Text</type>
</CustomField>