force-app/main/default/objects/Account/fields/Care_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Care_Team_Member__c</fullName>
    <description>This field associates the account with the user.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Care Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>