force-app/main/default/objects/Account/fields/CarrySum__c.field-meta.xml
<CustomField>
    <fullName>CarrySum__c</fullName>
    <label>CarrySum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>