force-app/main/default/objects/Account/fields/Client_MR__c.field-meta.xml
<CustomField>
    <fullName>Client_MR__c</fullName>
    <label>Client MR</label>
    <length>100</length>
    <type>Text</type>
</CustomField>