force-app/main/default/objects/Account/fields/Concurrent_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Review_Date__c</fullName>
    <label>Concurrent Review Date</label>
    <type>Date</type>
</CustomField>