force-app/main/default/objects/Account/fields/Contact_Consent__c.field-meta.xml
<CustomField>
    <fullName>Contact_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Consent</label>
    <type>Checkbox</type>
</CustomField>