force-app/main/default/objects/Account/fields/Current_Address__c.field-meta.xml
<CustomField>
    <fullName>Current_Address__c</fullName>
    <description>ONC Requirement</description>
    <label>Current Address</label>
    <type>TextArea</type>
</CustomField>