force-app/main/default/objects/Account/fields/Current_Status_Of_Patient__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Of_Patient__c</fullName>
    <description>Indicates the current health status of the patient, such as Patients In Review, Current Patients, etc.</description>
    <label>Current Status Of Patient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Patients In Review</fullName>
            </value>
            <value>
                <fullName>Current Patients</fullName>
            </value>
            <value>
                <fullName>Discharged Patients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>
 