force-app/main/default/objects/Account/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <description>Indicates whether the account holder is deceased or not.</description>
    <defaultValue>false</defaultValue>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>