force-app/main/default/objects/Account/fields/Deceased_Date__c.field-meta.xml
<CustomField>
    <fullName>Deceased_Date__c</fullName>
    <description>Captures the date of death if the account holder is deceased.</description>
    <label>Deceased Date</label>
    <type>Date</type>
</CustomField>