force-app/main/default/objects/Account/fields/Decline_to_Specify_Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Decline_to_Specify_Preferred_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whenever user don&apos;t have Preferred Language</description>
    <label>Decline to Specify</label>
    <type>Checkbox</type>
</CustomField>