force-app/main/default/objects/Account/fields/Decline_to_Specify_Race__c.field-meta.xml
<CustomField>
    <fullName>Decline_to_Specify_Race__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whenever user don&apos;t have Race</description>
    <label>Decline to Specify</label>
    <type>Checkbox</type>
</CustomField>