force-app/main/default/objects/Account/fields/dischargeDateNew__c.field-meta.xml
<CustomField>
    <fullName>dischargeDateNew__c</fullName>
    <description>Formula to record only the date value of the discharge date.</description>
    <formula>DATEVALUE( Discharge_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dischargeDateNew</label>
    <type>Date</type>
</CustomField>