force-app/main/default/objects/Account/fields/DisDate__c.field-meta.xml
<CustomField>
    <fullName>DisDate__c</fullName>
    <label>DisDate</label>
    <type>Date</type>
</CustomField>