force-app/main/default/objects/Account/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <description>Denotes whether the account holder should not be contacted.</description>
    <defaultValue>false</defaultValue>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>