force-app/main/default/objects/Account/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <description>Represents the date of birth of the account holder.</description>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>