force-app/main/default/objects/Account/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <description>Based on this field, users can select the type of document required for CCDA or Referral.</description>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCD</fullName>
            </value>
            <value>
                <fullName>Referral Note</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>