force-app/main/default/objects/Account/fields/Elixir_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Elixir_Account_Type__c</fullName>
    <description>The value in this field will be populated via a flow in the project.</description>
    <label>Elixir Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elixir_Patient_Account</fullName>
            </value>
            <value>
                <fullName>Elixir_Business_Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>