force-app/main/default/objects/Account/fields/Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Id__c</fullName>
    <description>Represents the email address associated with the account.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>