force-app/main/default/objects/Account/fields/End_date_of_authorization__c.field-meta.xml
<CustomField>
    <fullName>End_date_of_authorization__c</fullName>
    <label>End date of authorization</label>
    <type>Date</type>
</CustomField>