force-app/main/default/objects/Account/fields/End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Time__c</fullName>
    <description>Represents the end date time of the care episode associated with the account.</description>
    <label>End Date-Time</label>
    <type>DateTime</type>
</CustomField>