force-app/main/default/objects/Account/fields/Ethnicity_2__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to associate patient with the record object, which stores the concept code of Ethnicity.</description>
    <label>Ethnicity 2</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Master_Object__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Ethnicity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Master_Object__c</referenceTo>
    <relationshipLabel>Accounts (Ethnicity 2)</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>