force-app/main/default/objects/Account/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Captures the birth sex or gender identity of the account holder.</description>
    <label>Birth Sex</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
                <label>Male</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Female</label>
            </value>
            <value>
                <fullName>UNK</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>