force-app/main/default/objects/Account/fields/House_Number__c.field-meta.xml
<CustomField>
    <fullName>House_Number__c</fullName>
    <description>Formula field to record the house number associated with the account.</description>
    <formula>House__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Number</label>
    <type>Text</type>
</CustomField>