force-app/main/default/objects/Account/fields/Insurance_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Name__c</fullName>
    <label>Insurance Company Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>