force-app/main/default/objects/Account/fields/Insurance_Company_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Phone_Number__c</fullName>
    <label>Insurance Company Phone Number</label>
    <type>Phone</type>
</CustomField>