force-app/main/default/objects/Account/fields/Insurance_Employer_Information__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Employer_Information__c</fullName>
    <label>Insurance Employer Information</label>
    <type>TextArea</type>
</CustomField>