force-app/main/default/objects/Account/fields/Insurance_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Group_Number__c</fullName>
    <label>Insurance Group Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>