force-app/main/default/objects/Account/fields/Insurance_ID_Number_sec__c.field-meta.xml
<CustomField>
    <fullName>Insurance_ID_Number_sec__c</fullName>
    <label>Insurance ID Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>