force-app/main/default/objects/Account/fields/Insurance_provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_provider__c</fullName>
    <label>Insurance provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>Ambetter</fullName>
            </value>
            <value>
                <fullName>AmeriGroup</fullName>
            </value>
            <value>
                <fullName>AmeriHealth</fullName>
            </value>
            <value>
                <fullName>Anthem</fullName>
            </value>
            <value>
                <fullName>Avmed</fullName>
            </value>
            <value>
                <fullName>BCBS</fullName>
            </value>
            <value>
                <fullName>Beacon/Value Options</fullName>
            </value>
            <value>
                <fullName>Carefirst</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>ConnectiCare</fullName>
            </value>
            <value>
                <fullName>Conventry</fullName>
            </value>
            <value>
                <fullName>Empire BCBS</fullName>
            </value>
            <value>
                <fullName>Federal BCBS</fullName>
            </value>
            <value>
                <fullName>Florida BCBS</fullName>
            </value>
            <value>
                <fullName>GEHA</fullName>
            </value>
            <value>
                <fullName>GHI</fullName>
            </value>
            <value>
                <fullName>Harvard Pilgrim</fullName>
            </value>
            <value>
                <fullName>Health Net</fullName>
            </value>
            <value>
                <fullName>Highmark</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Magellan</fullName>
            </value>
            <value>
                <fullName>Magna Care</fullName>
            </value>
            <value>
                <fullName>Med Mutual</fullName>
            </value>
            <value>
                <fullName>MHNet</fullName>
            </value>
            <value>
                <fullName>Multiplan</fullName>
            </value>
            <value>
                <fullName>New Directions</fullName>
            </value>
            <value>
                <fullName>Optum</fullName>
            </value>
            <value>
                <fullName>Qualcare</fullName>
            </value>
            <value>
                <fullName>The Empire Plan (NYSHIP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>