force-app/main/default/objects/Account/fields/Insurance_type_sec__c.field-meta.xml
<CustomField>
    <fullName>Insurance_type_sec__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PPO</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>EPO</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>VA</fullName>
            </value>
            <value>
                <fullName>Tricare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>