force-app/main/default/objects/Account/fields/Insured_s_Address__c.field-meta.xml
<CustomField>
    <fullName>Insured_s_Address__c</fullName>
    <description>Represents the address of the insured associated with the account.</description>
    <label>Insured&apos;s Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>