force-app/main/default/objects/Account/fields/Is_Alumni__c.field-meta.xml
<CustomField>
    <fullName>Is_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Alumni</label>
    <type>Checkbox</type>
</CustomField>