force-app/main/default/objects/Account/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Represents the last name of the account holder.</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>