force-app/main/default/objects/Account/fields/Level_Of_Care__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Care__c</fullName>
    <description>This field is used to associate the program with the account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Level Of Care</label>
    <referenceTo>Programs__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>