force-app/main/default/objects/Account/fields/Level_Of_Care_Name__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Care_Name__c</fullName>
    <description>Formula field to represent the care level program name.</description>
    <formula>Level_Of_Care__r.Program_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Of Care Name</label>
    <type>Text</type>
</CustomField>