force-app/main/default/objects/Account/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>ONC Requirement</description>
    <label>Middle Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>