force-app/main/default/objects/Account/fields/MRN_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>MRN_Auto_Number__c</fullName>
    <displayFormat>M-{0000000000}</displayFormat>
    <label>MRN Auto Number</label>
    <type>AutoNumber</type>
</CustomField>