force-app/main/default/objects/Account/fields/MRN_Number__c.field-meta.xml
<CustomField>
    <fullName>MRN_Number__c</fullName>
    <description>Denotes the medical record number assigned to the account.</description>
    <label>MRN Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>