force-app/main/default/objects/Account/fields/MRN_Number_New__c.field-meta.xml
<CustomField>
    <fullName>MRN_Number_New__c</fullName>
    <description>Represents the alphanumeric medical record number associated with the account holder.</description>
    <label>MRN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>