force-app/main/default/objects/Account/fields/Next_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Review_Date__c</fullName>
    <description>Captures the date when the next review of the account's health status is scheduled.</description>
    <label>Next Review Date</label>
    <type>Date</type>
</CustomField>