force-app/main/default/objects/Account/fields/Note_Section__c.field-meta.xml
<CustomField>
    <fullName>Note_Section__c</fullName>
    <label>Note Section:</label>
    <type>TextArea</type>
</CustomField>