force-app/main/default/objects/Account/fields/Out_of_Cadence_Follow_ups__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Cadence_Follow_ups__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out of Cadence Follow-ups</label>
    <type>Checkbox</type>
</CustomField>